MAR-530: Removed html element level classes in CSS, Removed dijit attributes in styling. Scrollbar issue still needs to be resolved.

--- a/src/EPiServer.Marketing.Testing.Web/ClientResources/css/ABTesting.css
+++ b/src/EPiServer.Marketing.Testing.Web/ClientResources/css/ABTesting.css
@@ -1,19 +1,4 @@
-﻿input, textarea {
-    font-size: 14px;
-}
-
-em {
-    box-shadow: inset 0 -4px 0 #cbe25e;
-    font-style: normal;
-}
-
-hr {
-    border-bottom: 1px solid #eee;
-    border-top: none;
-    border-left: none;
-}
-
-.abBody {
+﻿.abBody {
     background-color: #eee;
     padding: 16px 32px;
     font-family: arial;
